subprojects {

    repositories {
        mavenCentral()
        jcenter()
    }

	// use "apply plugin" here to allow "plugins { }" in the modules
	apply plugin: 'java-library'
	apply plugin: 'maven'
	apply plugin: 'signing'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    
    // group and version of the project 
	version = '0.1.46'
	group = 'com.vc'

    ext {
        SLF4J_VERSION = '2.0.0'
        JUNIT_VERSION = '4.13.2'
        KOLOBOKE_VERSION = '1.0.0'
        KRYO_VERSION = '5.3.0'
        FASTUTIL_VERSION = '8.5.8'
        JBLAS_VERSION = '1.2.5'
    }

    dependencies {        
		testImplementation group: "junit", name: "junit", version: "${JUNIT_VERSION}"
    }
}